--- a/public/index.html
+++ b/public/index.html
@@ -233,11 +233,11 @@
     <script type="module">
         // Defensive check for firebase-config.js
         if (typeof userFirebaseConfig === 'undefined') {
-            alert('FATAL: firebase-config.js not loaded! Please ensure the file exists and is loaded before this script.');
+            document.body.innerHTML = '<div class="flex items-center justify-center min-h-screen"><div class="bg-white p-8 rounded shadow text-center"><h2 class="text-2xl font-bold mb-2 text-red-600">Configuration Error</h2><p class="text-gray-700 mb-4">firebase-config.js is missing or not loaded.<br>Please contact the site owner or try again later.</p></div></div>';
             throw new Error('FATAL: firebase-config.js not loaded!');
         }
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signOut, GoogleAuthProvider, signInWithPopup, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, onSnapshot, setDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         const firebaseConfig = typeof userFirebaseConfig !== 'undefined' ? userFirebaseConfig : {};
         const app = initializeApp(firebaseConfig);
@@ -246,6 +246,10 @@
         onAuthStateChanged(auth, (user) => {
             if (!user) {
                 window.location.href = '/login.html';
+            } else {
+                // Show username and signout button
+                document.getElementById('auth-signed-in-view').style.display = 'flex';
+                document.getElementById('user-id-display').textContent = user.isAnonymous ? 'Guest' : user.displayName || user.email;
             }
         });
 
