--- a/public/index.html
+++ b/public/index.html
@@ -237,41 +237,38 @@
             throw new Error('FATAL: firebase-config.js not loaded!');
         }
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, onAuthStateChanged, signOut, GoogleAuthProvider, signInWithPopup, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, onSnapshot, setDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-        const firebaseConfig = typeof userFirebaseConfig !== 'undefined' ? userFirebaseConfig : {};
+        const firebaseConfig = userFirebaseConfig;
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
-        // Restrict access until signed in
         onAuthStateChanged(auth, (user) => {
             if (!user) {
                 window.location.href = '/login.html';
-            } else {
-                // Show username and signout button
-                document.getElementById('auth-signed-in-view').style.display = 'flex';
-                document.getElementById('user-id-display').textContent = user.isAnonymous ? 'Guest' : user.displayName || user.email;
+                return;
             }
+            startApp(user);
         });
-
-        // --- Firebase Configuration ---
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'local-dev-app';
-
-        let app, db, auth, userId, docRef;
-        let localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [], symptomTracking: [], userProfile: {} };
-        let unsubscribe; // To hold the onSnapshot listener
-
-
-        localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [] };
-        let map;
-
-        const loadingIndicator = document.getElementById('full-page-loader');
-        const loaderText = document.getElementById('loader-text');
-        const statusMessageArea = document.getElementById('status-message-area');
-        const modalContainer = document.getElementById('modal-container');
-        const authSignedInView = document.getElementById('auth-signed-in-view');
-        const authSignedOutView = document.getElementById('auth-signed-out-view');
-        const userIdDisplay = document.getElementById('user-id-display');
-
+        function startApp(user) {
+            // All your app logic, Firestore, rendering, etc. goes here.
+            // Use the 'user' object as needed.
+            // --- Firebase Configuration ---
+            const appId = typeof __app_id !== 'undefined' ? __app_id : 'local-dev-app';
+            let db = getFirestore(app);
+            let userId = user.uid;
+            let docRef;
+            let localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [], symptomTracking: [], userProfile: {} };
+            let unsubscribe; // To hold the onSnapshot listener
+            let map;
+            const loadingIndicator = document.getElementById('full-page-loader');
+            const loaderText = document.getElementById('loader-text');
+            const statusMessageArea = document.getElementById('status-message-area');
+            const modalContainer = document.getElementById('modal-container');
+            const authSignedInView = document.getElementById('auth-signed-in-view');
+            const authSignedOutView = document.getElementById('auth-signed-out-view');
+            const userIdDisplay = document.getElementById('user-id-display');
+            // ... rest of your app logic ...
+        }
 
         // --- Awards Definition ---
         const awardsDefinition = {
