Enhance user interface in index.html and profile.html by updating the display logic for signed-in users, including guest identification. Streamline the visibility of UI elements based on authentication state to improve user experience.

--- a/public/index.html
+++ b/public/index.html
@@ -267,6 +267,10 @@
             const authSignedInView = document.getElementById('auth-signed-in-view');
             const authSignedOutView = document.getElementById('auth-signed-out-view');
             const userIdDisplay = document.getElementById('user-id-display');
+            // Set up UI for signed-in user (including guest)
+            authSignedOutView.style.display = 'none';
+            authSignedInView.style.display = 'flex';
+            userIdDisplay.textContent = user.isAnonymous ? 'Guest' : user.displayName || user.email;
             // ... rest of your app logic ...
         }
 
