--- a/public/index.html
+++ b/public/index.html
@@ -468,6 +468,33 @@
             });
         }
 
+        // --- Default Data Initialization for New Users (including guests) ---
+        async function initializeDefaultData() {
+            try {
+                loaderText.textContent = 'Setting up your data...';
+                // Load hospitals
+                const hospitals = await loadListFromFile('hospitals');
+                // Load ambulances
+                const ambulance = await loadListFromFile('ambulance');
+                // Set up localData
+                localData = {
+                    hospitals: hospitals || [],
+                    ambulance: ambulance || [],
+                    awards: [],
+                    visitHistory: [],
+                    medicalRecords: [],
+                    symptomTracking: [],
+                    userProfile: {}
+                };
+                // Save to Firestore
+                await saveData();
+                showStatusMessage('Default data initialized!', 'success');
+            } catch (error) {
+                console.error('Error initializing default data:', error);
+                showStatusMessage('Failed to initialize default data.', 'error');
+            }
+        }
+
         async function loadListFromFile(type) {
             try {
                 if (type === 'hospitals') {
