Remove commented-out note in firebase.json and add background-clip property in login.html for improved text styling.

--- a/public/login.html
+++ b/public/login.html
@@ -46,6 +46,7 @@
       background: linear-gradient(90deg, #444 0%, #6366f1 40%, #444 60%, #a78bfa 100%);
       background-size: 200% 200%;
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: rainbowFade 6s ease-in-out infinite alternate;
       filter: grayscale(0.4) contrast(1.1);
