--- a/public/login.html
+++ b/public/login.html
@@ -116,6 +116,7 @@
         </button>
       </div>
       <div class="mt-6 text-xs text-gray-400 text-center">By signing in, you agree to our <a href="#" class="underline hover:text-purple-600">Terms</a> and <a href="#" class="underline hover:text-purple-600">Privacy Policy</a>.</div>
+      <div id="login-status-message" class="mt-4"></div>
     </div>
     <!-- Guest Disclaimer Modal -->
     <div id="guest-modal" class="fixed inset-0 bg-gray-900 bg-opacity-60 flex items-center justify-center z-50 hidden">
@@ -140,6 +141,13 @@
     const firebaseConfig = userFirebaseConfig;
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    // --- Status/Error Message Helper ---
+    function showLoginStatusMessage(message, type = 'error') {
+      const msgDiv = document.getElementById('login-status-message');
+      msgDiv.innerHTML = `<div class="p-3 rounded-lg shadow font-medium mb-2 ${type === 'error' ? 'bg-red-100 text-red-800 border border-red-200' : 'bg-green-100 text-green-800 border border-green-200'}">${message}</div>`;
+      msgDiv.style.opacity = 1;
+      setTimeout(() => { msgDiv.style.opacity = 0; }, 6000);
+    }
     // Google SSO
     document.getElementById('google-signin-btn').addEventListener('click', async () => {
       try {
@@ -149,7 +157,7 @@
         await signInWithPopup(auth, provider);
         window.location.href = '/';
       } catch (error) {
-        alert('Google sign-in failed: ' + error.message);
+        showLoginStatusMessage('Google sign-in failed: ' + error.message, 'error');
       }
     });
     // Microsoft SSO
@@ -161,7 +169,7 @@
         await signInWithPopup(auth, provider);
         window.location.href = '/';
       } catch (error) {
-        alert('Microsoft sign-in failed: ' + error.message + '\n\nMake sure Microsoft SSO is enabled in your Firebase Console.');
+        showLoginStatusMessage('Microsoft sign-in failed: ' + error.message + '\nMake sure Microsoft SSO is enabled in your Firebase Console.', 'error');
       }
     });
     // Email/Password and Magic Link Modal
@@ -219,10 +227,10 @@
               handleCodeInApp: true
             });
             window.localStorage.setItem('emailForSignIn', email);
-            alert('A sign-in link has been sent to your email. Please check your inbox.');
+            showLoginStatusMessage('A sign-in link has been sent to your email. Please check your inbox.', 'success');
             modal.remove();
           } catch (error) {
-            alert('Failed to send sign-in link: ' + error.message);
+            showLoginStatusMessage('Failed to send sign-in link: ' + error.message, 'error');
           }
         } else {
           const password = modal.querySelector('#password').value;
@@ -232,7 +240,7 @@
             modal.remove();
             window.location.href = '/';
           } catch (error) {
-            alert('Email sign-in failed: ' + error.message);
+            showLoginStatusMessage('Email sign-in failed: ' + error.message, 'error');
           }
         }
       });
@@ -249,7 +257,7 @@
           window.location.href = '/';
         })
         .catch(error => {
-          alert('Email link sign-in failed: ' + error.message);
+          showLoginStatusMessage('Email link sign-in failed: ' + error.message, 'error');
         });
     }
     // Phone Number Sign-in
@@ -293,7 +301,7 @@
           modal.remove();
           window.location.href = '/';
         } catch (error) {
-          alert('Email sign-in failed: ' + error.message);
+          showLoginStatusMessage('Email sign-in failed: ' + error.message, 'error');
         }
       });
     }
@@ -338,7 +346,7 @@
           window.confirmationResult = confirmationResult;
           showVerificationCodeModal(modal);
         } catch (error) {
-          alert('Phone verification failed: ' + error.message);
+          showLoginStatusMessage('Phone verification failed: ' + error.message, 'error');
         }
       });
     }
@@ -377,7 +385,7 @@
           phoneModal.remove();
           window.location.href = '/';
         } catch (error) {
-          alert('Code verification failed: ' + error.message);
+          showLoginStatusMessage('Code verification failed: ' + error.message, 'error');
         }
       });
     }
@@ -397,7 +405,7 @@
         await signInAnonymously(auth);
         window.location.href = '/';
       } catch (error) {
-        alert('Guest sign-in failed: ' + error.message);
+        showLoginStatusMessage('Guest sign-in failed: ' + error.message, 'error');
       }
     });
   </script>
