Ensure unsubscribe is defined in index.html to prevent potential errors during authentication state changes. This improves the reliability of the authentication flow.

--- a/public/index.html
+++ b/public/index.html
@@ -246,6 +246,8 @@
         const db = getFirestore(app);
         // Make statusMessageArea available everywhere
         const statusMessageArea = document.getElementById('status-message-area');
+        // Ensure unsubscribe is always defined
+        let unsubscribe = null;
         onAuthStateChanged(auth, (user) => {
             if (!user) {
                 window.location.href = '/login.html';
